Force dark text and white bg on all form inputs via CSS

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,7 +38,8 @@
     color: hsl(var(--foreground));
   }
   input, select, textarea {
-    color: inherit;
+    color: #111827;
+    background-color: #ffffff;
   }
 }
 
